--- a/style.css
+++ b/style.css
@@ -282,19 +282,24 @@ header.active {
 
 .container {
     display: flex;
-    justify-content: space-evenly;
     padding: 0 2rem;
     padding-bottom: 5rem;
 }
 
 .block {
     text-align: center;
-    padding: 0 1rem;
+    padding: 0 2rem;
+    flex: 1;
 }
 
 .block h5 {
     font-size: 1rem;
     padding-bottom: 0.5rem;
+}
+
+.block i {
+    margin: 0 .5rem;
+    font-size: 1.25rem;
 }
 
 .block p {
@@ -334,17 +339,18 @@ header.active {
 .example-project {
     background-color: var(--clr-special);
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     padding: 0 5rem;
-    align-items: center;
 }
 
 .example-project img {
     height: 18rem;
+    margin-top: 2rem;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.384);
 }
 
 .example-project-text {
-    padding: 3rem 0;
+    padding-top: 3rem;
 }
 
 .example-project-text h3 {
@@ -360,7 +366,9 @@ header.active {
     background-color: var(--clr-blackish);
     color: var(--clr-white);
     border: 2px solid var(--clr-blackish);
-    margin-top: 1.5rem;
+    margin-top: 2rem;
+    width: 8rem;
+    margin-bottom: 3rem;
 }
 
 /* HOVER EFFECTS */
@@ -388,6 +396,7 @@ header.active {
 .about-me-text {
     text-align: right;
     padding: 0 2rem;
+    letter-spacing: 1px;
 }
 
 .about-me h3 {
@@ -398,6 +407,7 @@ header.active {
 .about-me h5 {
     padding: .75rem 0;
     font-size: 1.25rem;
+    color: rgb(194, 194, 194);
 }
 
 /* CONTACT ME ================================================= */
@@ -468,6 +478,7 @@ footer img {
     display: flex;
     justify-content: space-around;
     padding-bottom: 6rem;
+    flex: 1;
 }
 
 footer h5 {
