--- a/mediaQueries.css
+++ b/mediaQueries.css
@@ -56,6 +56,7 @@
     .about-me-text {
         padding: 0;
         padding-left: 1rem;
+        width: unset;
     }
 
     .about-me img {
@@ -81,6 +82,10 @@
 
 @media (max-width: 580px) {
     .contact form {
+        width: 90%;
+    }
+
+    #status {
         width: 90%;
     }
 }
