--- a/mediaQueries.css
+++ b/mediaQueries.css
@@ -56,7 +56,7 @@
     .about-me-text {
         padding: 0;
         padding-left: 1rem;
-        width: unset;
+        width: 100%;
     }
 
     .about-me img {
