--- a/mediaQueries.css
+++ b/mediaQueries.css
@@ -41,7 +41,7 @@
     }
 
     .example-project img {
-        display: none;
+        height: 13rem;
     }
 
     .what-i-do img:hover {
@@ -56,7 +56,7 @@
     .about-me-text {
         padding: 0;
         padding-left: 1rem;
-        width: 100%;
+        width: unset;
     }
 
     .about-me img {
@@ -126,6 +126,15 @@
         padding: 2rem;
     }
 
+    .example-project img {
+        height: 9rem;
+    }
+
+    .example-project button {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     .about-me {
         flex-direction: column;
         padding: 3rem 1.5rem;
@@ -146,8 +155,13 @@
         color: rgb(226, 226, 226);
     }
 
+    .what-i-do img {
+        width: 90%;
+    }
 
-
+    .example-project h3 {
+        white-space: normal;
+    }
 
     .footer-text-container {
         flex-direction: column;
@@ -158,6 +172,8 @@
         line-height: 1.2rem;
     }
 }
+
+
 
 
 
